--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     }
 </style>
 </head>
-<body>
+<body translate="no">
 	<header>
 		<div class="header-left">
 			<span class="nav-open"><ion-icon name="reorder-three-outline" style="--clr:black;"></ion-icon></span>
